--- a/etc/init/assets/brew/Brewfile
+++ b/etc/init/assets/brew/Brewfile
@@ -1,39 +1,40 @@
 tap 'homebrew/bundle'
 
-brew 'ack'
+#brew 'ack'
 brew 'autoconf'
-brew 'checkbashisms'
+#brew 'checkbashisms'
 brew 'coreutils'
-brew 'cowsay'
-brew 'direnv'
-brew 'ffmpeg'
-brew 'figlet'
-brew 'fzf'
-brew 'gawk'
-brew 'gdbm'
-brew 'gifsicle'
-brew 'git'
-brew 'go', args: ['cross-compile-common']
-brew 'hub'
-brew 'hugo'
-brew 'jq'
-brew 'lame'
+#brew 'cowsay'
+#brew 'direnv'
+#brew 'ffmpeg'
+#brew 'figlet'
+#brew 'fzf'
+#brew 'gawk'
+#brew 'gdbm'
+#brew 'gifsicle'
+#brew 'git'
+#brew 'go', args: ['cross-compile-common']
+#brew 'hub'
+#brew 'hugo'
+#brew 'jq'
+#brew 'lame'
 brew 'libevent'
 brew 'mercurial'
-brew 'nkf'
-brew 'node.js'
-brew 'nodebrew'
+#brew 'nkf'
+#brew 'node.js'
+#brew 'nodebrew'
 brew 'openssl'
-brew 'peco'
-brew 'python'
-brew 'rbenv'
-brew 'readline'
-brew 'reattach-to-user-namespace'
-brew 'ruby-build'
-brew 'shellcheck'
-brew 'sqlite'
-brew 'terminal-notifier'
-brew 'tig', args: ['with-docs']
+#brew 'peco'
+#brew 'python'
+brew 'pyenv'
+#brew 'rbenv'
+#brew 'readline'
+#brew 'reattach-to-user-namespace'
+#brew 'ruby-build'
+#brew 'shellcheck'
+#brew 'sqlite'
+#brew 'terminal-notifier'
+#brew 'tig', args: ['with-docs']
 brew 'tmux'
 brew 'tree'
 brew 'vim', args: ['with-lua', 'with-luajit']
@@ -41,32 +42,32 @@ brew 'wget'
 brew 'zsh', args: ['disable-etcdir']
 brew 'zsh-completions'
 
-tap 'caskroom/cask'
-brew 'brew-cask'
-cask '1password'
-cask 'appcleaner'
-cask 'bettertouchtool'
-cask 'burn'
-cask 'clipmenu'
-cask 'dragondrop'
+#tap 'caskroom/cask'
+#brew 'brew-cask'
+#cask '1password'
+#cask 'appcleaner'
+#cask 'bettertouchtool'
+#cask 'burn'
+#cask 'clipmenu'
+#cask 'dragondrop'
 #cask 'dropbox'
-cask 'firefox'
-cask 'flashlight'
-cask 'google-japanese-ime'
-cask 'karabiner'
-cask 'karabiner'
-cask 'keycast'
-cask 'kobito'
-cask 'macdown'
-cask 'mactex'
-cask 'macvim'
-cask 'mailbox'
-cask 'messenger'
-cask 'skitch'
-cask 'skype'
-cask 'the-unarchiver'
+#cask 'firefox'
+#cask 'flashlight'
+#cask 'google-japanese-ime'
+#cask 'karabiner'
+#cask 'karabiner'
+#cask 'keycast'
+#cask 'kobito'
+#cask 'macdown'
+#cask 'mactex'
+#cask 'macvim'
+#cask 'mailbox'
+#cask 'messenger'
+#cask 'skitch'
+#cask 'skype'
+#cask 'the-unarchiver'
 cask 'vagrant'
 cask 'virtualbox'
-cask 'vlc'
+#cask 'vlc'
 
 # vim: ft=conf
