fix tmux crach problem

--- a/etc/init/assets/brew/Brewfile
+++ b/etc/init/assets/brew/Brewfile
@@ -29,7 +29,7 @@ brew 'openssl'
 brew 'pyenv'
 #brew 'rbenv'
 #brew 'readline'
-#brew 'reattach-to-user-namespace'
+brew 'reattach-to-user-namespace'
 #brew 'ruby-build'
 #brew 'shellcheck'
 #brew 'sqlite'
