fix vim view settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,6 +98,7 @@ bind-key m command-prompt -p "Man:" "split-window 'man %%'"
 set-option -g status-position top
 
 set-option -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
 set-option -g pane-active-border-bg colour235
 
 ## Customize statusline
@@ -240,7 +241,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # bind-key -t vi-copy C-d scroll-down
 
 #bind-key -t vi-copy Y copy-line
-unbind-key Space
+# unbind-key Space
 #bind-key -t vi-copy Space begin-selection \; end-of-line
 #bind-key -t vi-copy V copy-end-of-line
 # bind-key -t vi-copy V select-line
